log
Fri 10 Mar 2023 12:09:35 PM UTC: 
 tests:  0|7
total_score: 0/70
176dd6e
Fri 10 Mar 2023 12:11:17 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
17c3e25
Fri 10 Mar 2023 12:14:46 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   30 |     *max=*a[0];
      |          ^~~~~
exercises.c:31:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     *min=*a[0]:
      |          ^~~~~
exercises.c:31:15: error: expected ‘;’ before ‘:’ token
   31 |     *min=*a[0]:
      |               ^
      |               ;
Compilation failed
1cf3c88
Fri 10 Mar 2023 12:15:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   30 |     *max=*a[0];
      |          ^~~~~
exercises.c:31:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |     *min=*a[0];
      |          ^~~~~
exercises.c:34:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |           ^~~~~
exercises.c:34:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |                           ^~~~~
exercises.c:35:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |           ^~~~~
exercises.c:35:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |                           ^~~~~
Compilation failed
978e300
Fri 10 Mar 2023 12:15:21 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:34:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |           ^~~~~
exercises.c:34:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   34 |       if (*a[k]>*max)*max=*a[k];
      |                           ^~~~~
exercises.c:35:11: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |           ^~~~~
exercises.c:35:27: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |       if (*a[k]<*min)*min=*a[k];
      |                           ^~~~~
Compilation failed
99ff91a
Fri 10 Mar 2023 12:15:31 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
06a666d
Fri 10 Mar 2023 05:56:07 PM UTC: 
 tests:  2|5
total_score: 20/70
4ecc3dd
Thu 16 Mar 2023 05:34:51 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0f30a29
Thu 16 Mar 2023 10:59:46 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
431248d
Fri 17 Mar 2023 10:14:53 AM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|3
total_score: 40/70
c8f2302
